# talkfilters

./: AUTHORS  ChangeLog  Makefile.am  README  austro.c  austro.l  austro.vcproj  b1ff.c  b1ff.l  b1ff.vcproj  brooklyn.c  brooklyn.l  brooklyn.vcproj  butthead.l  chef.c  chef.l  chef.vcproj  cockney.c  cockney.l  cockney.vcproj  common.c  common.h  config.h.in  configure.ac  drawl.c  drawl.l  drawl.vcproj  dubya.c  dubya.l  dubya.vcproj  fudd.c  fudd.l  fudd.vcproj  funetak.c  funetak.l  funetak.vcproj  jethro.c  jethro.l  jethro.vcproj  jive.c  (+35 more)
doc/: Makefile.am  gpl.texi  talkfilters.texi
